sass/screen.scss
/* Welcome to Compass.
 * This is the full site styling for VarsiTea
 * This file compiles into stylesheet/screen.css */

@import "compass/reset";

/* Cross-Site Styling*/
@mixin radius($radius) {
	-webkit-border-radius: $radius;
	-moz-border-radius: $radius;
	border-radius: $radius;
}

body {
	font-family: 'Open Sans', sans-serif;
}

a {
	text-decoration: none;
	&:hover {
		text-decoration: none;
	}
}

/* Header Styling */
header {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 100;

	width: 100%;
	height: 80px;
	border-bottom: 2px double #0099cc;

	background: #fff;
	#site-logo{
		float: left;

		display: block;
		width: 280px;
		height: 110px;
		margin: 0 0 0 30px;

		background: url("../img/vt-logo.png") no-repeat center;
	}
	nav {
		float: right;

		padding: 30px 0 0 0;
		margin: 0 30px 0 0;
		#menu-icon {
			display: hidden;
		}
		a {
			color: #0099cc;
			&:hover {
				#menu-icon {
					@include radius(4px 4px 0 0);

					background-color: #444444;
				}
			}
		}
		ul {
			padding: 14px 0 0 0;

			list-style: none;
			li {
				float: left;

				display: inline-block;
				padding: 10px 10px;
				&.current {
					color: #2262ad;
				}
				a {
					&:hover {
						color: #009900;
					}
				}
			}
		}	
	}
}

/* Parallax */
section {
	&.module {
		margin-bottom: 0;
		h2 {
			margin-bottom: 40px;

  			font-size: 30px;
		}
		p {
			margin-bottom: 40px;

  			font-size: 16px;
  			font-weight: 300;
		}
		&.content {
			padding: 40px 15px;
			&.facts {
				background-image: url("../img/facts-bg.jpg");
				background-repeat: repeat;
				h2, p, h3 {
					text-align: center;
				}
				h2 , h3{
					margin-bottom: 14px;

					font-weight: 700;
				}
				p {
					width: 700px;
					margin: 0 auto 36px auto;

					color: #009900;
					line-height: 22px;
				}
			}
			&.contact-us {
				p {
					width: 800px;
					margin: 0 auto 30px auto;

					text-align:  center;
					line-height: 24px;
					small {
						width: 100%;
						font-size: 12px;
						color: #d3d3d3;
					}
				}
				.form-container {
					width: 700px;
					margin: 0 auto;
					padding: 20px;
					border: 1px solid #009900;
					@include radius(8px);
					form {
						label {
							span.required {

							}
						}
						input {

						}
						textarea {

						}
						input#submit-button {
						
						}
					}
				}
			}
		}
		&.parallax {
			height: 500px; /* This matches the height of the background image file */

			background-position: 50% 50%;
			background-repeat: no-repeat;
			background-attachment: fixed; /* keeps the image in place */
		  	background-size: cover; /* no matter the size adjust it to proportion to the size of the browser */
			&.parallax-1 {
				margin-top: 82px;

  				background-image: url("../img/dream-jumper.jpg");
  				background-color: #ffffff;
	  			background-position: center 0;
	  			h1 {
					width: 780px;
					margin: 0 auto;
				    padding: 240px 0 0 0;

					color: #ffffff;
				    font-weight: 700;
				    font-size: 52px;
				    line-height: 62px;
				    text-transform: uppercase;
					text-shadow: 0 4px 5px rgba(0, 0, 0, 0.7);
					text-align: center;
				}
			}
			&.parallax-2 {
  				background-image: url("../img/student-interns1.jpg");
  				background-color: #ffffff;
	  			background-position: center 0;
	  			h2 {
					width: 730px;
					margin: 0 auto;
				    padding: 200px 0 0 0;

					color: #0099cc;
				    font-weight: 700;
				    font-size: 50px;
				    line-height: 58px;
				    text-transform: uppercase;
					text-shadow: 0 4px 5px rgba(0, 0, 0, 0.7);
					text-align: center;
				}
			}
		}
	}
}

/* Footer Styling */
footer {
    width: 100%;
    height: 50px;
    padding: 30px 0;
    border-top: 1px double #009900;

    background-color: #0099cc;
    p {
    	color: #ffffff;

		font-size: 10px;
    	font-weight: 400;
    	text-align: center;
    }
    .social-media {
    	ul {
    	    width: 228px;
    		padding: 14px 0;
    		margin: 0 auto;

    		list-style: none;
    		li {
    			display: inline-block;
    			margin: 0 16px 0 0;

    			font-size: 14px;
    			&:last-child {
    				margin-right: 0;
    			}
    			a {
					@include radius(4px);
					padding: 4px;

					background-color: #0099cc;
    			    color: #ffffff;
    				&:hover {
    				    background-color: #ffffff;
    					color: #009900;
    				}
    			}
    		}
    	}
    }
}

@media only screen and (max-width : 767px) {
	header {
		height: 62px;
		position: absolute;
		#site-logo{ 
			width: 220px;
    		height: 86px;
			margin: 0 0 0 10px;

			background: url("../img/vt-logo-xs.png") no-repeat center;
		}
		#menu-icon {
			display:inline-block;
			width: 40px;
    		height: 40px;
    		border: 2px solid #0099cc;
    		@include radius(4px 0 4px 4px);

    		background: #ffffff url("../img/vt-icon.png") center;
		}
		nav {
			padding: 12px 0 0 0;
			margin: 0 10px 0 0;
			ul, 
			&:active ul { 
				position: absolute;
				right: 10px;
    			top: 54px;

				display: none;
				width: 140px;
				padding: 0;
				border: 1px solid #0099cc;
				border-bottom: none;
				@include radius(0 0 4px 4px);

				background: #ffffff;
				li {
					float: none;

					display: block;
					width: 100%;
					padding: 10px 0;
					border-bottom: 1px solid #ffffff;

					background-color: #0099cc;

    				text-align: center;
    				&:hover {
    						background-color: #009900;
    				}
    				a {
    					display: block;

    					color: #ffffff;
    					&:hover {
    						color: #ffffff;
    					}
    				}
				}
			}
		}
	}
	section {
		&.module {
			&.parallax {
			    &.parallax-1 {
			    	margin-top: 64px;

			    	background-position: center 0;
			    	h1 {
						width: 100%;
						padding: 220px 0 0 0;

						font-size: 42px;
		    			line-height: 52px;
					}
			    }
			    &.parallax-2 {
			    	h2 {
			    		width: 100%;
			    	}
			    }
			}
			&.content {
				&.facts {
					p {
						width: 100%;
					}
				}
			}
		}
	}
}

